--- a/roles/calibreweb/defaults/main.yml
+++ b/roles/calibreweb/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 calibreweb_container_name: calibreweb
-calibreweb_dashboard_url: https://calibreweb.{{ host_local }}
+calibreweb_subdomain: calibreweb
+calibreweb_dashboard_url: https://{{ calibreweb_subdomain }}.{{ site_url }}
 calibreweb_dashboard_name: Calibre-Web
 calibreweb_homer_category: media
