--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 navidrome_container_name: navidrome
-navidrome_dashboard_url: https://navidrome.{{ host_local }}
+navidrome_subdomain: navidrome
+navidrome_dashboard_url: https://{{ navidrome_subdomain }}.{{ site_url }}
 navidrome_dashboard_name: Navidrome
 navidrome_homer_category: media
