--- a/roles/arm/tasks/main.yml
+++ b/roles/arm/tasks/main.yml
@@ -35,7 +35,7 @@
     image: automaticrippingmachine/automatic-ripping-machine:latest
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     privileged: true
     devices:
       - /dev/sr0:/dev/sr0
@@ -54,11 +54,14 @@
       - "{{ mergerfs_root }}/Downloads/arm_music:/home/arm/Music"
       - /etc/localtime:/etc/localtime:ro
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ arm_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "{{ arm_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ arm_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ arm_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
