--- a/roles/deluge/tasks/main.yml
+++ b/roles/deluge/tasks/main.yml
@@ -22,10 +22,14 @@
 - name: Make sure that Deluge container is created and running
   docker_container:
     name: "{{ deluge_container_name }}"
-    image: binhex/arch-delugevpn:2.1.1-4-05 # In case of issues with MergerFS stick to :2.0.5-1-04
+    image: binhex/arch-delugevpn:2.1.1-6-05
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
+    exposed_ports:
+      - 8112
+      - 8118
+      - 9118
     privileged: true
     sysctls:
       net.ipv4.conf.all.src_valid_mark: "1"
@@ -40,7 +44,7 @@
       NAME_SERVERS: 9.9.9.9,149.112.112.112
       DELUGE_DAEMON_LOG_LEVEL: info
       DELUGE_WEB_LOG_LEVEL: info
-      DEBUG: "true"
+      DEBUG: "false"
       UMASK: "000"
       PUID: "{{ guid }}"
       PGID: "{{ guid }}"
@@ -51,11 +55,14 @@
       - "{{ mergerfs_root }}/Downloads:/home/nobody/Downloads"
       - /etc/localtime:/etc/localtime:ro
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ deluge_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "{{ deluge_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ deluge_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ deluge_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
