--- a/roles/docker/vars/Debian.yml
+++ b/roles/docker/vars/Debian.yml
@@ -11,5 +11,8 @@ docker_deps:
   - docker-compose
 
 docker_packages:
-  - docker.io
-  - docker-registry
+  - docker-ce
+  - docker-ce-cli
+  - containerd.io
+  - docker-buildx-plugin
+  - docker-compose-plugin
