--- a/roles/duplicati/defaults/main.yml
+++ b/roles/duplicati/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 duplicati_container_name: duplicati
-duplicati_dashboard_url: https://duplicati.{{ host_local }}
+duplicati_subdomain: duplicati
+duplicati_dashboard_url: https://{{ duplicati_subdomain }}.{{ site_url }}
 duplicati_dashboard_name: Duplicati
 duplicati_homer_category: services
