--- a/roles/duplicati/tasks/main.yml
+++ b/roles/duplicati/tasks/main.yml
@@ -2,11 +2,11 @@
 ---
 - name: Make sure that Duplicati container is created and running
   docker_container:
-    name: duplicati
+    name: "{{ duplicati_container_name }}"
     image: ghcr.io/linuxserver/duplicati
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -17,11 +17,14 @@
       - "{{ mergerfs_root }}/Documents:/source/Documents:ro"
       - "{{ mergerfs_root }}/Pictures:/source/Pictures:ro"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ duplicati_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
-    src: templates/duplicati.subdomain.conf.j2
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/duplicati.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    src: "templates/{{ duplicati_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ duplicati_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
