--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -17,7 +17,7 @@
     security_opts:
       - seccomp:unconfined
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -33,11 +33,14 @@
       - "{{ mergerfs_root }}/Downloads:/config/Downloads"
       - "{{ docker_dir }}/{{ firefox_container_name }}:/config/.mozilla/firefox"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ firefox_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "{{ firefox_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ firefox_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ firefox_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
