--- a/roles/handbrake/tasks/main.yml
+++ b/roles/handbrake/tasks/main.yml
@@ -13,7 +13,7 @@
     image: jlesage/handbrake:latest
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       USER_ID: "{{ guid }}"
@@ -21,16 +21,19 @@
       TZ: "{{ timezone }}"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /docker/appdata/handbrake:/config:rw
+      - "{{ docker_dir }}/{{ handbrake_container_name }}:/config"
       - "{{ mergerfs_root }}/Downloads:/storage:ro"
       - "{{ mergerfs_root }}/Downloads/hb_watch:/watch"
       - "{{ mergerfs_root }}/Downloads/hb_completed:/output"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ handbrake_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "{{ handbrake_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ handbrake_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ handbrake_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
