--- a/roles/healthchecks/tasks/main.yml
+++ b/roles/healthchecks/tasks/main.yml
@@ -3,9 +3,9 @@
   file:
     path: "{{ docker_dir }}/{{ healthchecks_container_name }}/config"
     state: directory
-    owner: "{{ username }}"
-    group: "{{ username }}"
-    mode: "0700"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: "0750"
 
 - name: Make sure that Healthchecks container is created and running
   docker_container:
@@ -13,11 +13,12 @@
     image: lscr.io/linuxserver/healthchecks:latest
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       PUID: "{{ guid }}"
       PGID: "{{ guid }}"
+      TZ: "{{ timezone }}"
       SITE_ROOT: https://healthchecks.{{ host_local }}
       SITE_NAME: CataFalco
       SUPERUSER_EMAIL: "{{ email }}"
@@ -27,16 +28,20 @@
       EMAIL_HOST_USER: "{{ email_login }}"
       EMAIL_HOST_PASSWORD: "{{ email_password }}"
       EMAIL_USE_TLS: "True"
-      REGENERATE_SETTINGS: "True"
+      REGISTRATION_OPEN: "False"
+      SITE_LOGO_URL: "https://{{ host_local }}/assets/tools/homer-icons/logo.png"
       DEBUG: "False"
     volumes:
       - "{{ docker_dir }}/{{ healthchecks_container_name }}/config:/config"
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ healthchecks_dashboard_name }}"
     restart_policy: unless-stopped
 
 - name: Install the SWAG config files
   template:
     src: "{{ healthchecks_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ healthchecks_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ healthchecks_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
