--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -6,27 +6,21 @@
     image: b4bz/homer
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     user: "{{ guid }}:{{ guid }}"
     volumes:
       - "{{ docker_dir }}/homer:/www/assets"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "Homer"
+      swag.uptime-kuma.monitor.url: "{{ site_url }}"
 
 - name: Install the SWAG config files
   template:
     src: homer.subdomain.conf.j2
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/homer.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/homer.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
-
-# - name: Make sure cors-container is created and running
-#   docker_container:
-#     name: cors-container
-#     image: imjacobclark/cors-container
-#     pull: true
-#     networks:
-#       - name: swag_internal_network
-#     state: started
-#     restart_policy: unless-stopped
