--- a/roles/influxdb/tasks/main.yml
+++ b/roles/influxdb/tasks/main.yml
@@ -5,7 +5,7 @@
     image: influxdb
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       DOCKER_INFLUXDB_INIT_MODE: setup
@@ -22,13 +22,16 @@
     ports:
       - 127.0.0.1:8086:8086/tcp
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ influxdb_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "{{ influxdb_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ influxdb_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ influxdb_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
 
 # docker exec influxdb influx auth create --org "catafalco" --read-authorizations --write-authorizations --read-buckets --write-buckets --read-dashboards
