--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -13,23 +13,26 @@
     image: deluan/navidrome:latest
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     user: "{{ guid }}:{{ guid }}"
     env:
       ND_SCANSCHEDULE: 1h
       ND_LOGLEVEL: info
       ND_SESSIONTIMEOUT: 24h
-      ND_DEFAULTTHEME: Spotify-ish
+      ND_DEFAULTTHEME: Nord
     volumes:
       - "{{ docker_dir }}/{{ navidrome_container_name }}/data:/data"
       - "{{ mergerfs_root }}/Media/Music:/music:ro"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ navidrome_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "templates/{{ navidrome_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ navidrome_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ navidrome_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
