--- a/roles/prowlarr/tasks/main.yml
+++ b/roles/prowlarr/tasks/main.yml
@@ -5,7 +5,7 @@
     image: ghcr.io/flaresolverr/flaresolverr:latest
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       LOG_LEVEL: info
@@ -18,7 +18,7 @@
     image: lscr.io/linuxserver/prowlarr:develop
     pull: true
     networks:
-      - name: swag_internal_network
+      - name: swag_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -28,11 +28,14 @@
       - /etc/localtime:/etc/localtime:ro
       - "{{ docker_dir }}/{{ prowlarr_container_name }}:/config"
     restart_policy: unless-stopped
+    labels:
+      swag.uptime-kuma.enabled: "true"
+      swag.uptime-kuma.monitor.name: "{{ prowlarr_dashboard_name }}"
 
 - name: Install the SWAG config files
   template:
     src: "templates/{{ prowlarr_container_name }}.subdomain.conf.j2"
-    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ prowlarr_container_name }}.subdomain.conf"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ prowlarr_container_name }}.subdomain.conf"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0644"
