--- a/roles/speedtest_tracker/defaults/main.yml
+++ b/roles/speedtest_tracker/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 speedtest_tracker_container_name: speedtest_tracker
-speedtest_tracker_dashboard_url: https://speedtest.{{ host_local }}
+speedtest_tracker_subdomain: speedtest
+speedtest_tracker_dashboard_url: https://{{ speedtest_tracker_subdomain }}.{{ site_url }}
 speedtest_tracker_dashboard_name: Speedtest Tracker
 speedtest_tracker_homer_category: services
