--- a/roles/swag/handlers/main.yml
+++ b/roles/swag/handlers/main.yml
@@ -1,18 +1,11 @@
 ---
-- name: Test nginx
-  command:
-    cmd: docker exec -it {{ item }} /usr/sbin/nginx -c /config/nginx/nginx.conf -t
-  register: swag_nginx_test
-  changed_when: swag_nginx_test is not search("test is successful")
-  failed_when: swag_nginx_test is not search("test is successful")
-  with_items:
-    - swag_internal
-
 - name: Restart swag
-  docker_container:
-    name: "{{ item }}"
+  community.docker.docker_container:
+    name: swag
     state: started
     restart: true
-  with_items:
-    - swag_internal
-  when: existing is defined and running is defined
+
+- name: Refresh Uptime Kuma monitored services
+  community.docker.docker_container_exec:
+    container: "{{ swag_container_name }}"
+    command: python3 /app/auto-uptime-kuma.py
