--- a/roles/swag/tasks/install_configs.yml
+++ b/roles/swag/tasks/install_configs.yml
@@ -1,30 +1,26 @@
 ---
 - name: Create the proxy-conf folders
   file:
-    path: "{{ docker_dir }}/swag/{{ item }}/nginx/proxy-confs/"
+    path: "{{ docker_dir }}/swag/nginx/proxy-confs/"
     state: directory
     recurse: true
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
     mode: "0755"
-  with_items:
-    - internal
 
 - name: Create the DNS conf folder
   file:
     path: "{{ docker_dir }}/swag/dns-conf"
     state: directory
     recurse: true
-    owner: "{{ username }}"
-    group: "{{ username }}"
-    mode: "0755"
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: "0750"
 
 - name: Install the DNS config file
   template:
     src: dns-conf/cloudflare.ini.j2
     dest: "{{ docker_dir }}/swag/dns-conf/cloudflare.ini"
-    owner: "{{ username }}"
-    group: "{{ username }}"
-    mode: "0644"
-  notify:
-    - Restart swag
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: "0600"
