--- a/roles/swag/tasks/networks.yml
+++ b/roles/swag/tasks/networks.yml
@@ -1,25 +1,6 @@
 ---
-# Useful CIDR calculator https://www.ipaddressguide.com/cidr
-
-# - name: Create an internal macvlan network
-#   docker_network:
-#     name: swag_macvlan
-#     driver: macvlan
-#     driver_options:
-#       parent: enp2s0
-#     ipam_config:
-#       - subnet: "{{ lan_network }}"
-#         gateway: "{{ lan_gateway }}"
-#         iprange: "192.168.1.253/32"
-
-- name: Create an internal network
+- name: Create an docker network
   docker_network:
-    name: swag_internal_network
+    name: swag_network
     ipam_config:
       - subnet: 172.18.0.0/16
-
-# - name: Create a public network
-#    docker_network:
-#     name: swag_public_network
-#     ipam_config:
-#     - subnet: "172.19.0.0/16"
