--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Make sure that Watchtower container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "{{ watchtower_container_name }}"
     image: containrrr/watchtower
     pull: true
     state: started
